# notify-manager-rs

./: Cargo.toml
examples/: basic.rs  dingtalk_native.rs  discord.rs  email.rs  feishu.rs  slack.rs  sms_aliyun.rs  telegram.rs  webhook.rs  wecom.rs
src/: error.rs  lib.rs  message.rs  sender.rs
src/channel/: discord.rs  email.rs  mod.rs  slack.rs  sms.rs  telegram.rs  webhook.rs
src/channel/dingtalk/: message.rs  mod.rs
src/channel/feishu/: message.rs  mod.rs
src/channel/sms/: aliyun.rs  mod.rs
src/channel/wecom/: message.rs  mod.rs
